deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-kube
spec:
  replicas: 5
  selector:
    matchLabels:
      app: test-kube
  template:
    metadata:
      labels:
        app: test-kube
    spec:
      containers:
      - name: test-kube
        image: kintsdev/test-kube:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: test-kube
spec:
  type: ClusterIP
  selector:
    app: test-kube
  ports:
  - port: 8080
    targetPort: 8080
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-kube
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test-kube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-kube
            port:
              number: 8080
